--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}知乎{% endblock %}
+{% block title %}SourceFind{% endblock %}
 
 {% block head %}
 {{ super() }}
@@ -89,7 +89,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span> 
             </button>
-            <a class="navbar-brand" style="font-size:30px" href="{{ url_for('main.index') }}">NoteBook</a>
+            <a class="navbar-brand" style="font-size:30px" href="{{ url_for('main.index') }}">SourceFind</a>
         </div>
 
         <div class="navbar-collapse collapse">
